# emining_university

./: .env.example  .gitignore  ADMIN_FIXES.md  ADMIN_FIXES_PART2.md  CUSTOM_ADMIN_GUIDE.md  CUSTOM_ADMIN_SETUP.md  IMPLEMENTATION_GUIDE.md  README.md  dump_data_utf8.py  extract_docs.py  extract_to_json.py  main.py  manage.py  production_readiness_report.md  pyproject.toml  requirements.txt
courses/: admin.py  admin_views.py  forms.py  models.py  urls.py  utils.py  views.py
courses/migrations/: 0001_initial.py  0002_lesson_enrollment_completed_enrollment_completed_at_and_more.py  0003_course_requirements_course_tags_and_more.py  0004_alter_course_description_alter_course_image_and_more.py  0004_alter_course_slug.py
data_templates/: courses_extracted.json  courses_from_filenames.json  courses_template.json  instructors.json  instructors_template.json
emining_university/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
templates/: about.html  base.html  contact.html  dashboard.html  home.html  instructors.html  profile.html
templates/cart/: cart.html  checkout.html
templates/certificates/: my_certificates.html  verify.html
templates/courses/: add_review.html  course_content.html  course_detail.html  courses_list.html  create_discussion.html  discussion_detail.html  discussions.html  lesson_detail.html
templates/custom_admin/: base.html  categories_list.html  category_confirm_delete.html  category_form.html  certificates_list.html  course_detail.html  courses_list.html  create_course.html  create_instructor.html  dashboard.html  users_list.html  (+11 more)
(+10 files in other folders)
