[project]
name = "emining-university"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "cloudinary>=1.44.1",
    "crispy-bootstrap5>=2025.6",
    "dj-database-url>=3.0.1",
    "django>=6.0,<7.0",
    "django-cloudinary-storage>=0.3.0",
    "django-cors-headers>=4.3.0",
    "django-crispy-forms>=2.5",
    "django-redis>=5.4.0",
    "django-storages>=1.14.2",
    "gunicorn>=21.2.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "redis>=5.0.0",
    "reportlab>=4.0.0",
    "requests>=2.31.0",
    "sentry-sdk>=1.38.0",
    "whitenoise>=6.6.0",
]
